Update: Rotate image8, style headers, add code link, remove specific text

--- a/index.html
+++ b/index.html
@@ -8,12 +8,14 @@
 </head>
 <body>
 <div class="container">
-<div class="image-container"><img src="media/image_rId7.jpg" alt="实验图片" loading="lazy"></div>
-<p>中国农业大学</p>
-<p>课程设计</p>
-<p>（2025-2026学年秋季学期）</p>
-<p>课设题目： AI器官芯片毒性显微检测平台</p>
-<p>课程名称： 电子信息系统软件实验</p>
+<header class="report-header">
+<div class="header-info-large">中国农业大学</div>
+<div class="header-info-large">课程设计</div>
+<div class="header-info">（2025-2026学年秋季学期）</div>
+<h1 class="report-title">课设题目： AI器官芯片毒性显微检测平台</h1>
+<div class="header-info">课程名称： 电子信息系统软件实验</div>
+<div class="code-link"><a href="code" target="_blank">📂 查看项目完整代码 (Project Code)</a></div>
+</header>
 <p>课设背景：</p>
 <p>1.1课设介绍</p>
 <p>本课程设计面向显微镜/显微相机下的细胞与器官芯片图像分析需求，构建了一套“边缘端采集与推理 + 上位机交互与可视化”的实验系统。系统以高通EB2开发板为边缘计算平台，完成摄像头采集、实时视频推流、深度学习推理服务与传统视觉算法的协同；</p>
@@ -182,7 +184,7 @@
 <h2>6.5 总结</h2>
 <p>总体而言，本项目在课程设计周期内完成了较为完整的端侧显微智能检测原型系统。系统以EB2为核心，形成了可复现的采集推流与推理服务化方案，并通过Streamlit界面将实验流程产品化呈现。我们小组4人通过分工合作，成功实现了基本AI器官芯片毒性显微检测，通过这次课设，我们又一次增强了对Linux系统和OpenCV的使用和拓展，在这过程中遇到很多问题，从网络路由器配置到实时识别，在我们自己训练的YOLO11模型权重因为格式问题无法导入到EB2里面，通过格式转换解决，在许多次EB2推流错误，一次次调整代码和配置文件网络，我们成功一一解决所有问题，实现了在Linux系统里面一个可落地的小项目的完成。</p>
 <p>附录A  关键命令清单</p>
-<p>说明：本附录用于集中列出本课程设计中最常用、最关键的命令，便于他人复现。请你在最终提交时将路径与脚本名替换为你项目中的真实名称。</p>
+<p>说明：本附录用于集中列出本课程设计中最常用、最关键的命令，便于他人复现。。</p>
 <p>EB2端查看摄像头设备：v4l2-ctl --list-devices</p>
 <p>EB2端查看端口监听：ss -lntp | grep -E '5000|5001'</p>
 <p>EB2端检查磁盘空间：df -h</p>
