Update code link and deploy to GitHub

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <div class="header-info">（2025-2026学年秋季学期）</div>
 <h1 class="report-title">课设题目： AI器官芯片毒性显微检测平台</h1>
 <div class="header-info">课程名称： 电子信息系统软件实验</div>
-<div class="code-link"><a href="code" target="_blank">📂 查看项目完整代码 (Project Code)</a></div>
+<div class="code-link"><a href="https://github.com/zyTi870/ruanjiankeshe/tree/main/code" target="_blank">📂 查看项目完整代码 (Project Code)</a></div>
 </header>
 <p>课设背景：</p>
 <p>1.1课设介绍</p>
